--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ deploy:
   access_key_id: $AWS_ACCESS_KEY
   secret_access_key:
     secure: "$AWS_SECRET_KEY"
-  bucket: "www.davidcmccracken.com"
+  bucket: "http://www.davidcmccracken.com.s3-website-us-west-2.amazonaws.com"
   skip_cleanup: true
   region: eu-west-2
