--- a/.travis.yml
+++ b/.travis.yml
@@ -15,4 +15,4 @@ deploy:
     secure: "$AWS_SECRET_KEY"
   bucket: www.davidcmccracken.com
   skip_cleanup: true
-  region: eu-west-2
+  region: us-west-2
